<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="PrivateResource">Coinz</string>
    <string name="action_settings">Settings</string>
    <string name="trasparentbackground">trasparentBackground</string>
    <string name="sign_up">SIGN UP</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signupbutton">signupButton</string>
    <string name="if_you_have_an_account">If you have an account,</string>
    <string name="log_in_now">log in now</string>
    <string name="coinz">COINz</string>
    <string name="loginicon">loginicon</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="loginicons">loginicons</string>
    <string name="signupicons">signupicons</string>
    <string name="loginbutton">loginButton</string>
    <string name="if_you_don_t_have_an_account">If you don\'t have an account,</string>
    <string name="sign_up_now">sign up now</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="gold_coins">GOLD COINS:</string>
    <string name="hello">HELLO</string>
    <string name="log_out">Log Out</string>
    <string name="bank">Bank</string>
    <string name="delete">Delete</string>
    <string name="show">Show</string>
    <string name="deselect_all">Deselect All</string>
    <string name="select_all">Select All</string>
    <string name="your_coins">YOUR COINS</string>
    <string name="title_activity_avatars">AvatarsActivity</string>
    <string name="title_activity_notifications">NotificationsActivity</string>
</resources>
